RESOLVED FIXED 264532
[Cocoa] Baseline alignment of checkboxes and radio buttons is incorrect in vertical writing mode
https://bugs.webkit.org/show_bug.cgi?id=264532
Summary [Cocoa] Baseline alignment of checkboxes and radio buttons is incorrect in ve...
Aditya Keerthi
Reported Thursday, November 9, 2023 11:43:22 PM UTC
Created attachment 468544 [details] Example of poor alignment The alignment looks bad.
Attachments
Example of poor alignment (28.29 KB, image/png)
2023-11-09 15:43 PST, Aditya Keerthi
no flags
Radar WebKit Bug Importer
Comment 1 Thursday, November 9, 2023 11:43:53 PM UTC
Aditya Keerthi
Comment 2 Friday, November 10, 2023 1:36:49 AM UTC
Aditya Keerthi
Comment 3 Friday, November 10, 2023 3:10:53 AM UTC
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/43072
EWS
Comment 4 Friday, November 10, 2023 9:11:55 PM UTC
Committed 270565@main (8a732f35575e): <https://commits.webkit.org/270565@main> Reviewed commits have been landed. Closing PR #20276 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.